[gd_scene load_steps=5 format=3 uid="uid://bgwty4no40aef"]

[ext_resource type="Script" uid="uid://ftrp87dt2cbf" path="res://Buff/burn_buff.gd" id="1_wxqwu"]
[ext_resource type="Texture2D" uid="uid://cdtahqryqtkhv" path="res://Asset/Buff/Aura Api.png" id="2_wxqwu"]
[ext_resource type="AudioStream" uid="uid://j6cmlceygidr" path="res://Asset/Audio/Buff/Fire Buff.wav" id="3_enfwe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kq4yt"]
radius = 634.023

[node name="Burn" type="Node2D"]
script = ExtResource("1_wxqwu")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
texture = ExtResource("2_wxqwu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kq4yt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../../../..")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_enfwe")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
